--- a/.env_example
+++ b/.env_example
@@ -22,6 +22,12 @@ NGINX_HOST_HTTPS_PORT=443
 NGINX_BACK_END_PORT=
 NGINX_FRONT_END_PORT=
 
+# reverse proxy setting
+# NGINX_HOST_HTTP_PORT=50100
+# NGINX_HOST_HTTPS_PORT=443
+# NGINX_BACK_END_PORT=80
+# NGINX_FRONT_END_PORT=8080
+
 ### MYSQL #################################################
 
 MYSQL_HOST=
