add backend .env setting.

--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -1,10 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=nihil
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+# LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -50,3 +51,16 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APP_SLACK_CHANNEL="channel_title"
+APP_SLACK_NAME="bot-name"
+APP_SLACK_ICON=:ghost:
+APP_SLACK_WEBHOOK_URL=""
+
+TEST_USR_SEEDER_PASSWORD=
+TEST_ADMIN_SEEDER_PASSWORD=
+
+JWT_SECRET=
+
+JWT_TTL=30
+JWT_REFRESH_TTL=120
