--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,16 +5,26 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .ts,.js,.tsx,.jsx --ignore-path .gitignore . --fix",
+    "lint:css": "stylelint src/**/*.scss"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "@vitejs/plugin-react": "^1.0.7",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "sass": "^1.45.2",
+    "stylelint": "^14.2.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
