--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.5",
+    "prettier": "^2.5.1",
     "sass": "^1.45.2",
     "stylelint": "^14.2.0",
     "ts-jest": "^27.1.2",
