--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint --ext .ts,.js,.tsx,.jsx --ignore-path .gitignore . --fix",
     "lint:css": "stylelint src/**/*.scss",
     "test:unit": "jest --config jest.config.js",
-    "test:e2e": "cypress open --browser chrome"
+    "test:e2e": "cypress open --browser chrome",
+    "prepare": "cd .. && husky install frontend/.husky",
+    "create-precommit": "cd .. && husky add frontend/.husky/pre-commit \"cd frontend && yarn lint-staged\"",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -30,12 +33,21 @@
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.4.5",
+    "lint-staged": "^12.1.5",
     "prettier": "^2.5.1",
     "sass": "^1.45.2",
     "stylelint": "^14.2.0",
     "ts-jest": "^27.1.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.tsx": "eslint --cache --fix",
+    "*.js": "eslint --cache --fix",
+    "*.jsx": "eslint --cache --fix",
+    "*.css": "stylelint --fix"
   }
 }
