--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.75",
         "laravel/jetstream": "^2.5",
         "laravel/sanctum": "^2.11",
+        "laravel/slack-notification-channel": "^2.3",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
         "maatwebsite/excel": "^3.1",
