--- a/api/api.yaml
+++ b/api/api.yaml
@@ -965,92 +965,102 @@ definitions:
     xml:
       name: "AuthenticatedUser"
   Member:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "string"
-      email:
-        type: "string"
-      password:
-        type: "string"
-      phone:
-        type: "string"
-      roleId:
-        type: "integer"
-        format: "int64"
-        description: "Admin`s role id"
+    type: "array"
+    items:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        name:
+          type: "string"
+        email:
+          type: "string"
+        password:
+          type: "string"
+        phone:
+          type: "string"
+        roleId:
+          type: "integer"
+          format: "int64"
+          description: "Admin`s role id"
     xml:
       name: "Member"
   Permissions:
-    type: "object"
-    properties:
-      value:
-        type: "integer"
-        format: "int64"
-      text:
-        type: "string"
+    type: "array"
+    items:
+      type: "object"
+      properties:
+        value:
+          type: "integer"
+          format: "int64"
+        text:
+          type: "string"
     xml:
       name: "Permissions"
   Roles:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "string"
-      code:
-        type: "string"
-      detail:
-        type: "string"
-      permissions:
-        type: "integer"
-        format: "int64"
-        description: "Role`s permission ids"
+    type: "array"
+    items:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        name:
+          type: "string"
+        code:
+          type: "string"
+        detail:
+          type: "string"
+        permissions:
+          type: "integer"
+          format: "int64"
+          description: "Role`s permission ids"
     xml:
       name: "Roles"
   RolesList:
-    type: "object"
-    properties:
-      value:
-        type: "integer"
-        format: "int64"
-      text:
-        type: "string"
+    type: "array"
+    items:
+      type: "object"
+      properties:
+        value:
+          type: "integer"
+          format: "int64"
+        text:
+          type: "string"
     xml:
       name: "RolesList"
   GameEnemies:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "string"
-      level:
-        type: "integer"
-        format: "int64"
-      hp:
-        type: "integer"
-        format: "int64"
-      mp:
-        type: "integer"
-        format: "int64"
-      offece:
-        type: "integer"
-        format: "int64"
-      defense:
-        type: "integer"
-        format: "int64"
-      speed:
-        type: "integer"
-        format: "int64"
-      magic:
-        type: "integer"
-        format: "int64"
+    type: "array"
+    items:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        name:
+          type: "string"
+        level:
+          type: "integer"
+          format: "int64"
+        hp:
+          type: "integer"
+          format: "int64"
+        mp:
+          type: "integer"
+          format: "int64"
+        offece:
+          type: "integer"
+          format: "int64"
+        defense:
+          type: "integer"
+          format: "int64"
+        speed:
+          type: "integer"
+          format: "int64"
+        magic:
+          type: "integer"
+          format: "int64"
   FileData:
     description: "binary data"
     type: "object"
