--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.1
 info:
   description: "Test 12345 You can find out more about     Swagger at
     [http://swagger.io](http://swagger.io) or on [irc.freenode.net,
@@ -1202,3 +1202,5 @@ components:
           type: string
         message:
           type: string
+    Tester:
+      $ref: "./data/sample.yaml"
