--- a/docker-compose.swagger.yml
+++ b/docker-compose.swagger.yml
@@ -5,6 +5,7 @@ services:
     image: 'swaggerapi/swagger-editor'
     volumes:
       - ./api/api.yaml:/tmp/swagger.yaml
+      - ./api/data/:/tmp/data/
     ports:
       - 8100:8080
     environment:
