--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1045,162 +1045,38 @@ components:
       name: api_key
       in: header
   schemas:
+    # $ref: "./data/schemas/schemas.yaml"
     AuthRequestResponse:
-      type: object
-      properties:
-        access_token:
-          type: string
-        token_type:
-          type: string
-        expires_in:
-          type: string
-        user:
-          $ref: "#/components/schemas/AuthenticatedUser"
-      xml:
-        name: AuthRequestResponse
+      $ref: "./data/schemas/AuthRequestResponse.yaml"
+      # type: object
+      # properties:
+      #   access_token:
+      #     type: string
+      #   token_type:
+      #     type: string
+      #   expires_in:
+      #     type: string
+      #   user:
+      #     $ref: "#/components/schemas/AuthenticatedUser"
+      # xml:
+      #   name: AuthRequestResponse
     AuthenticatedUser:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
-        authority:
-          type: integer
-          format: int32
-          description: User authority id
-      xml:
-        name: AuthenticatedUser
+      $ref: "./data/schemas/AuthenticatedUser.yaml"
     Member:
-      type: array
-      items:
-        type: object
-        properties:
-          id:
-            type: integer
-            format: int64
-          name:
-            type: string
-          email:
-            type: string
-          password:
-            type: string
-          phone:
-            type: string
-          roleId:
-            type: integer
-            format: int64
-            description: Admin`s role id
-      xml:
-        name: Member
+      $ref: "./data/schemas/Member.yaml"
     Permissions:
-      type: array
-      items:
-        type: object
-        properties:
-          value:
-            type: integer
-            format: int64
-          text:
-            type: string
-      xml:
-        name: Permissions
+      $ref: "./data/schemas/Permissions.yaml"
     Roles:
-      type: array
-      items:
-        type: object
-        properties:
-          id:
-            type: integer
-            format: int64
-          name:
-            type: string
-          code:
-            type: string
-          detail:
-            type: string
-          permissions:
-            type: integer
-            format: int64
-            description: Role`s permission ids
-      xml:
-        name: Roles
+      $ref: "./data/schemas/Roles.yaml"
     RolesList:
-      type: array
-      items:
-        type: object
-        properties:
-          value:
-            type: integer
-            format: int64
-          text:
-            type: string
-      xml:
-        name: RolesList
+      $ref: "./data/schemas/RolesList.yaml"
     GameEnemies:
-      type: array
-      items:
-        type: object
-        properties:
-          id:
-            type: integer
-            format: int64
-          name:
-            type: string
-          level:
-            type: integer
-            format: int64
-          hp:
-            type: integer
-            format: int64
-          mp:
-            type: integer
-            format: int64
-          offece:
-            type: integer
-            format: int64
-          defense:
-            type: integer
-            format: int64
-          speed:
-            type: integer
-            format: int64
-          magic:
-            type: integer
-            format: int64
+      $ref: "./data/schemas/GameEnemies.yaml"
     FileData:
-      description: binary data
-      type: object
+      $ref: "./data/schemas/FileData.yaml"
     ApiSuccessResponse:
-      type: object
-      properties:
-        status:
-          type: integer
-          format: int32
-        message:
-          type: string
+      $ref: "./data/schemas/ApiSuccessResponse.yaml"
     ApiErrorResponse:
-      type: object
-      properties:
-        status:
-          type: integer
-          format: int32
-        errors:
-          type: array
-          items:
-            type: string
-        message:
-          type: string
+      $ref: "./data/schemas/ApiErrorResponse.yaml"
     ApiResponse:
-      type: object
-      properties:
-        code:
-          type: integer
-          format: int32
-        type:
-          type: string
-        message:
-          type: string
-    Tester:
-      $ref: "./data/sample.yaml"
+      $ref: "./data/schemas/ApiResponse.yaml"
