--- a/api/data/components/components.yaml
+++ b/api/data/components/components.yaml
@@ -1,4 +1,4 @@
-components:
+# components:
   requestBodies:
     createRoleWithForm:
       content:
@@ -47,163 +47,26 @@ components:
       name: api_key
       in: header
   schemas:
-    $ref: "../schemas/index.yaml"
-#     AuthRequestResponse:
-#       type: object
-#       properties:
-#         access_token:
-#           type: string
-#         token_type:
-#           type: string
-#         expires_in:
-#           type: string
-#         user:
-#           $ref: "#/components/schemas/AuthenticatedUser"
-#       xml:
-#         name: AuthRequestResponse
-#     AuthenticatedUser:
-#       type: object
-#       properties:
-#         id:
-#           type: integer
-#           format: int64
-#         name:
-#           type: string
-#         authority:
-#           type: integer
-#           format: int32
-#           description: User authority id
-#       xml:
-#         name: AuthenticatedUser
-#     Member:
-#       type: array
-#       items:
-#         type: object
-#         properties:
-#           id:
-#             type: integer
-#             format: int64
-#           name:
-#             type: string
-#           email:
-#             type: string
-#           password:
-#             type: string
-#           phone:
-#             type: string
-#           roleId:
-#             type: integer
-#             format: int64
-#             description: Admin`s role id
-#       xml:
-#         name: Member
-#     Permissions:
-#       type: array
-#       items:
-#         type: object
-#         properties:
-#           value:
-#             type: integer
-#             format: int64
-#           text:
-#             type: string
-#       xml:
-#         name: Permissions
-#     Roles:
-#       type: array
-#       items:
-#         type: object
-#         properties:
-#           id:
-#             type: integer
-#             format: int64
-#           name:
-#             type: string
-#           code:
-#             type: string
-#           detail:
-#             type: string
-#           permissions:
-#             type: integer
-#             format: int64
-#             description: Role`s permission ids
-#       xml:
-#         name: Roles
-#     RolesList:
-#       type: array
-#       items:
-#         type: object
-#         properties:
-#           value:
-#             type: integer
-#             format: int64
-#           text:
-#             type: string
-#       xml:
-#         name: RolesList
-#     GameEnemies:
-#       type: array
-#       items:
-#         type: object
-#         properties:
-#           id:
-#             type: integer
-#             format: int64
-#           name:
-#             type: string
-#           level:
-#             type: integer
-#             format: int64
-#           hp:
-#             type: integer
-#             format: int64
-#           mp:
-#             type: integer
-#             format: int64
-#           offece:
-#             type: integer
-#             format: int64
-#           defense:
-#             type: integer
-#             format: int64
-#           speed:
-#             type: integer
-#             format: int64
-#           magic:
-#             type: integer
-#             format: int64
-#     FileData:
-#       description: binary data
-#       type: object
-#     ApiSuccessResponse:
-#       type: object
-#       properties:
-#         status:
-#           type: integer
-#           format: int32
-#         message:
-#           type: string
-#     ApiErrorResponse:
-#       type: object
-#       properties:
-#         status:
-#           type: integer
-#           format: int32
-#         errors:
-#           type: array
-#           items:
-#             type: string
-#         message:
-#           type: string
-#     ApiResponse:
-#       type: object
-#       properties:
-#         code:
-#           type: integer
-#           format: int32
-#         type:
-#           type: string
-#         message:
-#           type: string
-#     Tester:
-#       $ref: "./data/sample.yaml"
+    # $ref: "../schemas/schemas.yaml"
+    AuthRequestResponse:
+      $ref: "../schemas/AuthRequestResponse.yaml"
+    AuthenticatedUser:
+      $ref: "../schemas/AuthenticatedUser.yaml"
+    Member:
+      $ref: "../schemas/Member.yaml"
+    Permissions:
+      $ref: "../schemas/Permissions.yaml"
+    Roles:
+      $ref: "../schemas/Roles.yaml"
+    RolesList:
+      $ref: "../schemas/RolesList.yaml"
+    GameEnemies:
+      $ref: "../schemas/GameEnemies.yaml"
+    FileData:
+      $ref: "../schemas/FileData.yaml"
+    ApiSuccessResponse:
+      $ref: "../schemas/ApiSuccessResponse.yaml"
+    ApiErrorResponse:
+      $ref: "../schemas/ApiErrorResponse.yaml"
+    ApiResponse:
+      $ref: "../schemas/ApiResponse.yaml"
