--- a/api/api.yaml
+++ b/api/api.yaml
@@ -999,30 +999,31 @@ servers:
 components:
   requestBodies:
     createRoleWithForm:
-      content:
-        application/x-www-form-urlencoded:
-          schema:
-            type: object
-            properties:
-              name:
-                description: name of Role
-                type: string
-              code:
-                description: code of Role
-                type: string
-              detail:
-                description: detail of Role
-                type: string
-              permissions:
-                description: id of Permission
-                type: array
-                items:
-                  type: integer
-            required:
-              - name
-              - code
-              - detail
-              - permissions
+      $ref: "./data/components/requestBodies/createRoleWithForm.yaml"
+      # content:
+      #   application/x-www-form-urlencoded:
+      #     schema:
+      #       type: object
+      #       properties:
+      #         name:
+      #           description: name of Role
+      #           type: string
+      #         code:
+      #           description: code of Role
+      #           type: string
+      #         detail:
+      #           description: detail of Role
+      #           type: string
+      #         permissions:
+      #           description: id of Permission
+      #           type: array
+      #           items:
+      #             type: integer
+      #       required:
+      #         - name
+      #         - code
+      #         - detail
+      #         - permissions
   securitySchemes:
     members_auth:
       $ref: "./data/components/securitySchemes/membersAuth.yaml"
