--- a/api/api.yaml
+++ b/api/api.yaml
@@ -911,85 +911,87 @@ paths:
               schema:
                 $ref: "#/components/schemas/ApiErrorResponse"
   /auth/admin/refresh:
-    post:
-      tags:
-        - auth
-      summary: Refresh authenticated token
-      description: Refresh Authenticated token Function
-      parameters:
-        - name: authenticaion_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: string
-        - name: authority_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: array
-            items:
-              type: string
-      responses:
-        "200":
-          description: Authenticated
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/AuthRequestResponse"
-        "401":
-          description: Unahthorithed
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-        default:
-          description: unsuccessful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
+    $ref: "./data/paths/authAdmin/refresh.yaml"
+    # post:
+    #   tags:
+    #     - auth
+    #   summary: Refresh authenticated token
+    #   description: Refresh Authenticated token Function
+    #   parameters:
+    #     - name: authenticaion_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: string
+    #     - name: authority_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: array
+    #         items:
+    #           type: string
+    #   responses:
+    #     "200":
+    #       description: Authenticated
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/AuthRequestResponse"
+    #     "401":
+    #       description: Unahthorithed
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #     default:
+    #       description: unsuccessful operation
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
   /auth/admin/self:
-    post:
-      tags:
-        - auth
-      summary: Check authenticated
-      description: Check Authenticated Function
-      parameters:
-        - name: authenticaion_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: string
-        - name: authority_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: array
-            items:
-              type: string
-      responses:
-        "200":
-          description: Authenticated
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/AuthenticatedUser"
-        "401":
-          description: Unahthorithed
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-        default:
-          description: unsuccessful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
+    $ref: "./data/paths/authAdmin/self.yaml"
+    # post:
+    #   tags:
+    #     - auth
+    #   summary: Check authenticated
+    #   description: Check Authenticated Function
+    #   parameters:
+    #     - name: authenticaion_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: string
+    #     - name: authority_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: array
+    #         items:
+    #           type: string
+    #   responses:
+    #     "200":
+    #       description: Authenticated
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/AuthenticatedUser"
+    #     "401":
+    #       description: Unahthorithed
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #     default:
+    #       description: unsuccessful operation
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
