--- a/api/api.yaml
+++ b/api/api.yaml
@@ -92,77 +92,78 @@ paths:
     #     - authenticaion_key: []
     #     - authority_key: []
   /admin/members/member:
-    post:
-      tags:
-        - members
-      summary: Create Administrator
-      description: ""
-      operationId: createMemberWithForm
-      parameters:
-        - name: authenticaion_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: string
-        - name: authority_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: array
-            items:
-              type: string
-      requestBody:
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              type: object
-              properties:
-                name:
-                  description: name of administrator
-                  type: string
-                email:
-                  description: email of administrator
-                  type: string
-                roleId:
-                  description: role of administrator
-                  type: integer
-                password:
-                  description: password of administrator
-                  type: string
-                password_confirmation:
-                  description: confirm password of administrator
-                  type: string
-              required:
-                - name
-                - email
-                - roleId
-                - password
-                - password_confirmation
-      responses:
-        "201":
-          description: successful Logout
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiSuccessResponse"
-        "405":
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-        "422":
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-      security:
-        - members_auth:
-            - write:members
-            - read:members
+    $ref: "./data/paths/admin/members/member/index.yaml"
+    # post:
+    #   tags:
+    #     - members
+    #   summary: Create Administrator
+    #   description: ""
+    #   operationId: createMemberWithForm
+    #   parameters:
+    #     - name: authenticaion_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: string
+    #     - name: authority_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: array
+    #         items:
+    #           type: string
+    #   requestBody:
+    #     content:
+    #       application/x-www-form-urlencoded:
+    #         schema:
+    #           type: object
+    #           properties:
+    #             name:
+    #               description: name of administrator
+    #               type: string
+    #             email:
+    #               description: email of administrator
+    #               type: string
+    #             roleId:
+    #               description: role of administrator
+    #               type: integer
+    #             password:
+    #               description: password of administrator
+    #               type: string
+    #             password_confirmation:
+    #               description: confirm password of administrator
+    #               type: string
+    #           required:
+    #             - name
+    #             - email
+    #             - roleId
+    #             - password
+    #             - password_confirmation
+    #   responses:
+    #     "201":
+    #       description: successful Logout
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiSuccessResponse"
+    #     "405":
+    #       description: Invalid input
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #     "422":
+    #       description: Invalid input
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #   security:
+    #     - members_auth:
+    #         - write:members
+    #         - read:members
   "/admin/members/member/{id}":
     patch:
       tags:
