--- a/api/api.yaml
+++ b/api/api.yaml
@@ -508,44 +508,53 @@ paths:
     #         - write:members
     #         - read:members
   "/admin/roles/role/{id}":
-    patch:
-      tags:
-        - roles
-      summary: Update Role
-      description: ""
-      operationId: UpdateRoleWithForm
-      parameters:
-        - name: id
-          in: path
-          description: ID of Role
-          required: true
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        $ref: "#/components/requestBodies/createRoleWithForm"
-      responses:
-        "200":
-          description: successful UPdate
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiSuccessResponse"
-        "405":
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-        "422":
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-      security:
-        - authenticaion_key: []
-        - authority_key: []
+    parameters:
+      - name: id
+        in: path
+        description: ID of role
+        required: true
+        schema:
+          type: integer
+          format: int64
+    $ref: "./data/paths/admin/roles/role/id.yaml"
+    # patch:
+    #   tags:
+    #     - roles
+    #   summary: Update Role
+    #   description: ""
+    #   operationId: UpdateRoleWithForm
+    #   parameters:
+    #     - name: id
+    #       in: path
+    #       description: ID of Role
+    #       required: true
+    #       schema:
+    #         type: integer
+    #         format: int64
+    #   requestBody:
+    #     $ref: "#/components/requestBodies/createRoleWithForm"
+    #   responses:
+    #     "200":
+    #       description: successful UPdate
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiSuccessResponse"
+    #     "405":
+    #       description: Invalid input
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #     "422":
+    #       description: Invalid input
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #   security:
+    #     - authenticaion_key: []
+    #     - authority_key: []
   /admin/game/enemies:
     get:
       tags:
