--- a/api/api.yaml
+++ b/api/api.yaml
@@ -614,88 +614,89 @@ paths:
     #     - authenticaion_key: []
     #     - authority_key: []
   /admin/game/enemies/file/template:
-    get:
-      tags:
-        - gameEnemies
-      summary: Get gameEnemies Template File
-      description: Returns Template File of Enemeies
-      responses:
-        "200":
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/FileData"
-        "404":
-          description: GameEnemies not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-        default:
-          description: unsuccessful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-      security:
-        - authenticaion_key: []
-        - authority_key: []
-    post:
-      tags:
-        - gameEnemies
-      summary: Import gameEnemies Template File
-      description: ""
-      operationId: importEnemiesWithFile
-      parameters:
-        - name: authenticaion_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: string
-        - name: authority_key
-          in: header
-          description: api key
-          required: true
-          schema:
-            type: array
-            items:
-              type: string
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                file:
-                  description: File Data
-                  type: string
-                  format: binary
-              required:
-                - file
-      responses:
-        "201":
-          description: successful Create
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiSuccessResponse"
-        "405":
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-        "422":
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiErrorResponse"
-      security:
-        - authenticaion_key: []
-        - authority_key: []
+    $ref: "./data/paths/admin/game/enemies/file/template.yaml"
+    # get:
+    #   tags:
+    #     - gameEnemies
+    #   summary: Get gameEnemies Template File
+    #   description: Returns Template File of Enemeies
+    #   responses:
+    #     "200":
+    #       description: successful operation
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/FileData"
+    #     "404":
+    #       description: GameEnemies not found
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #     default:
+    #       description: unsuccessful operation
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #   security:
+    #     - authenticaion_key: []
+    #     - authority_key: []
+    # post:
+    #   tags:
+    #     - gameEnemies
+    #   summary: Import gameEnemies Template File
+    #   description: ""
+    #   operationId: importEnemiesWithFile
+    #   parameters:
+    #     - name: authenticaion_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: string
+    #     - name: authority_key
+    #       in: header
+    #       description: api key
+    #       required: true
+    #       schema:
+    #         type: array
+    #         items:
+    #           type: string
+    #   requestBody:
+    #     content:
+    #       multipart/form-data:
+    #         schema:
+    #           type: object
+    #           properties:
+    #             file:
+    #               description: File Data
+    #               type: string
+    #               format: binary
+    #           required:
+    #             - file
+    #   responses:
+    #     "201":
+    #       description: successful Create
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiSuccessResponse"
+    #     "405":
+    #       description: Invalid input
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #     "422":
+    #       description: Invalid input
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/ApiErrorResponse"
+    #   security:
+    #     - authenticaion_key: []
+    #     - authority_key: []
   "/admin/game/enemies/enemy/{id}":
     patch:
       tags:
