--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.13",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.2",
