--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,7 +18,8 @@
     "types": [
       "vite/client",
       "@types/jest",
-      "jest"
+      "jest",
+      "node"
     ],
     "baseUrl": ".",
     "paths": {
