--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         node-version: '14'
         cache: 'yarn'
+        cache-dependency-path: frontend/yarn.lock
     - name: Install Dependencies
       run: cd frontend && yarn install
     - name: Execute tests(Unit Test)
