--- a/api/data/paths/admin/auth/login.yaml
+++ b/api/data/paths/admin/auth/login.yaml
@@ -1,4 +1,4 @@
-# /auth/admin/login:
+# /admin/auth/login:
   post:
     tags:
       - auth
@@ -25,16 +25,16 @@
         content:
           application/json:
             schema:
-              $ref: "../../schemas/auth/AuthRequestResponse.yaml"
+              $ref: "../../../schemas/auth/AuthRequestResponse.yaml"
       "400":
         description: Invalid username/password supplied
         content:
           application/json:
             schema:
-              $ref: "../../schemas/request/ApiErrorResponse.yaml"
+              $ref: "../../../schemas/request/ApiErrorResponse.yaml"
       "422":
         description: Invalid input
         content:
           application/json:
             schema:
-              $ref: "../../schemas/request/ApiErrorResponse.yaml"
+              $ref: "../../../schemas/request/ApiErrorResponse.yaml"
