--- a/api/data/paths/admin/members/member/index.yaml
+++ b/api/data/paths/admin/members/member/index.yaml
@@ -67,6 +67,5 @@
             schema:
               $ref: "../../../../schemas/request/ApiErrorResponse.yaml"
     security:
-      - members_auth:
-          - write:members
-          - read:members
+      - authenticaion_key: []
+      - authority_key: []
