--- a/api/api.yaml
+++ b/api/api.yaml
@@ -85,27 +85,27 @@ paths:
     $ref: "./data/paths/admin/game/enemies/enemy/id.yaml"
   /admin/game/enemies/enemy:
     $ref: "./data/paths/admin/game/enemies/enemy/index.yaml"
-  /auth/admin/login:
-    $ref: "./data/paths/authAdmin/login.yaml"
-  /auth/admin/logout:
-    $ref: "./data/paths/authAdmin/logout.yaml"
-  /auth/admin/refresh:
-    $ref: "./data/paths/authAdmin/refresh.yaml"
-  /auth/admin/self:
-    $ref: "./data/paths/authAdmin/self.yaml"
+  /admin/auth/login:
+    $ref: "./data/paths/admin/auth/login.yaml"
+  /admin/auth/logout:
+    $ref: "./data/paths/admin/auth/logout.yaml"
+  /admin/auth/refresh:
+    $ref: "./data/paths/admin/auth/refresh.yaml"
+  /admin/auth/self:
+    $ref: "./data/paths/admin/auth/self.yaml"
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-  - url: https://localhost:3200/api/v1
+  # - url: https://localhost:3200/api/v1
   - url: http://localhost:3200/api/v1
 components:
   requestBodies:
     createRoleWithForm:
       $ref: "./data/components/requestBodies/createRoleWithForm.yaml"
   securitySchemes:
-    members_auth:
-      $ref: "./data/components/securitySchemes/membersAuth.yaml"
+    # members_auth:
+    #   $ref: "./data/components/securitySchemes/membersAuth.yaml"
     authenticaion_key:
       $ref: "./data/components/securitySchemes/authenticaionKey.yaml"
     authority_key:
