--- a/api/data/paths/admin/auth/logout.yaml
+++ b/api/data/paths/admin/auth/logout.yaml
@@ -1,4 +1,4 @@
-# /auth/admin/logout:
+# /admin/auth/logout:
   post:
     tags:
       - auth
@@ -25,18 +25,18 @@
         content:
           application/json:
             schema:
-              $ref: "../../schemas/request/ApiSuccessResponse.yaml"
+              $ref: "../../../schemas/request/ApiSuccessResponse.yaml"
       "401":
         description: Unahthorithed
         content:
           application/json:
             schema:
-              $ref: "../../schemas/request/ApiErrorResponse.yaml"
+              $ref: "../../../schemas/request/ApiErrorResponse.yaml"
               # $ref: "#/components/schemas/ApiErrorResponse"
       default:
         description: unsuccessful operation
         content:
           application/json:
             schema:
-              $ref: "../../schemas/request/ApiErrorResponse.yaml"
+              $ref: "../../../schemas/request/ApiErrorResponse.yaml"
               # $ref: "#/components/schemas/ApiErrorResponse"
