--- a/api/data/paths/admin/auth/refresh.yaml
+++ b/api/data/paths/admin/auth/refresh.yaml
@@ -1,4 +1,4 @@
-# /auth/admin/refresh:
+# /admin/auth/refresh:
   post:
     tags:
       - auth
@@ -25,19 +25,19 @@
         content:
           application/json:
             schema:
-              $ref: "../../schemas/auth/AuthRequestResponse.yaml"
+              $ref: "../../../schemas/auth/AuthRequestResponse.yaml"
               # $ref: "#/components/schemas/AuthRequestResponse"
       "401":
         description: Unahthorithed
         content:
           application/json:
             schema:
-              $ref: "../../schemas/request/ApiErrorResponse.yaml"
+              $ref: "../../../schemas/request/ApiErrorResponse.yaml"
               # $ref: "#/components/schemas/ApiErrorResponse"
       default:
         description: unsuccessful operation
         content:
           application/json:
             schema:
-              $ref: "../../schemas/request/ApiErrorResponse.yaml"
+              $ref: "../../../schemas/request/ApiErrorResponse.yaml"
               # $ref: "#/components/schemas/ApiErrorResponse"
