--- a/api/data/paths/admin/members/member/id.yaml
+++ b/api/data/paths/admin/members/member/id.yaml
@@ -66,9 +66,8 @@
             schema:
               $ref: "../../../../schemas/request/ApiErrorResponse.yaml"
     security:
-      - members_auth:
-          - write:members
-          - read:members
+      - authenticaion_key: []
+      - authority_key: []
   delete:
     tags:
       - members
@@ -123,6 +122,5 @@
             schema:
               $ref: "../../../../schemas/request/ApiErrorResponse.yaml"
     security:
-      - members_auth:
-          - write:members
-          - read:members
+      - authenticaion_key: []
+      - authority_key: []
