modify request content type to application/json.

--- a/api/data/components/index.yaml
+++ b/api/data/components/index.yaml
@@ -2,7 +2,8 @@
 requestBodies:
   createRoleWithForm:
     content:
-      application/x-www-form-urlencoded:
+      # application/x-www-form-urlencoded:
+      application/json:
         schema:
           type: object
           properties:
