--- a/api/data/paths/admin/auth/login.yaml
+++ b/api/data/paths/admin/auth/login.yaml
@@ -6,7 +6,8 @@
     description: Login Function
     requestBody:
       content:
-        application/x-www-form-urlencoded:
+        # application/x-www-form-urlencoded:
+        application/json:
           schema:
             type: object
             properties:
