--- a/api/data/components/requestBodies/createRoleWithForm.yaml
+++ b/api/data/components/requestBodies/createRoleWithForm.yaml
@@ -1,7 +1,8 @@
 # createRoleWithForm:
   description: test createRoleWithForm description.
   content:
-    application/x-www-form-urlencoded:
+    # application/x-www-form-urlencoded:
+    application/json:
       schema:
         type: object
         properties:
