--- a/api/data/paths/admin/game/enemies/enemy/id.yaml
+++ b/api/data/paths/admin/game/enemies/enemy/id.yaml
@@ -29,7 +29,8 @@
           format: int64
     requestBody:
       content:
-        application/x-www-form-urlencoded:
+        # application/x-www-form-urlencoded:
+        application/json:
           schema:
             type: object
             properties:
