--- a/api/data/paths/admin/members/member/index.yaml
+++ b/api/data/paths/admin/members/member/index.yaml
@@ -22,7 +22,8 @@
             type: string
     requestBody:
       content:
-        application/x-www-form-urlencoded:
+        # application/x-www-form-urlencoded:
+        application/json:
           schema:
             type: object
             properties:
